tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__GettingSoulShard-AAAAAAAAAAAAAAAAAAABrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 430,
  "prerequisites": [
    432
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Enable your sword by shift-right-clicking and slay some enemies! Collect as many shards as possible. You will need a ton of them...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Getting Soul Shards",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    432
  ],
  "rewards": [],
  "tasks": []
}
