tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__GlassSacrificial-AAAAAAAAAAAAAAAAAAAJlA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2452,
  "prerequisites": [
    424
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Glass Sacrificial Dagger works the same as the normal one, but gives you more LP and can cause you to bleed. The amount you get is randomized.\n\nTo get the Glass Shards, break normal Glass while holding Flint.\n\nUnfortunately the glass version of the Dagger of Sacrifice might have some bugs, but other players are saying it works fine. Maybe try it yourself and report any issues.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glass Sacrificial Dagger",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    424
  ],
  "rewards": [],
  "tasks": []
}
