tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__ImperfectRitualS-AAAAAAAAAAAAAAAAAAAJlQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2453,
  "prerequisites": [
    2457
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This stone allows you to create simple rituals, such as changing the time to night, or summoning a thunderstorm.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Imperfect Ritual Stone",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2457
  ],
  "rewards": [],
  "tasks": []
}
