tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__ItHoldsMoreOk-AAAAAAAAAAAAAAAAAAAJnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2460,
  "prerequisites": [
    701
  ],
  "properties": {
    "auto_claim": false,
    "desc": "But why is it transparent?\n\n[note]Does not actually hold more, doesn't render the blood in it properly, and can't be used in the altar. It does list the amount of blood you have in realtime though, and is used to make the next one.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "It Holds More, Ok?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    701
  ],
  "rewards": [],
  "tasks": []
}
