tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__MicroRituals-AAAAAAAAAAAAAAAAAAAJmg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2458,
  "prerequisites": [
    433
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Don't want to use all that space for rituals? Use the Soul Compactor to reduce them to a single block!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Micro-Rituals",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    433
  ],
  "rewards": [],
  "tasks": []
}
